<resources>
    <string name="app_name">MovieDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="title_genre">Genre</string>
    <string name="title_average">Average vote:</string>
    <string name="menu_up_coming">Up coming</string>
    <string name="menu_toprate">Toprate</string>
    <string name="title_name">Name:</string>
    <string name="title_manufacturer">Manufacturer:</string>
    <string name="title_overview">Overview</string>
    <string name="title_release_date">Release date</string>
    <string name="colon">:</string>
    <string name="text_title_caster">Caster</string>
    <string name="text_underline"><u>%s</u></string>
    <string name="title_trailer">Trailer</string>
    <string-array name="key_genre">
        <item>popular</item>
        <item>now_playing</item>
        <item>upcoming</item>
        <item>toprate</item>
    </string-array>

    <string-array name="title_genre">
        <item>Popular</item>
        <item>Now Playing</item>
        <item>Up coming</item>
        <item>Toprate</item>
    </string-array>
</resources>
