<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.moviedb.ui.main.MainActivity" />

        <variable
            name="mainActivity"
            type="com.example.moviedb.ui.main.MainActivity" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <include
            android:id="@+id/appBar"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nav_popular"
                        style="@style/TextNavigationItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> mainActivity.navigateTo(navPopular)}"
                        android:text="@string/menu_popular" />

                    <TextView
                        android:id="@+id/nav_now_playing"
                        style="@style/TextNavigationItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> mainActivity.navigateTo(navNowPlaying)}"
                        android:text="@string/menu_now_playing" />

                    <TextView
                        android:id="@+id/nav_up_coming"
                        style="@style/TextNavigationItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> mainActivity.navigateTo(navUpComing)}"
                        android:text="@string/menu_up_coming" />

                    <TextView
                        android:id="@+id/nav_toprate"
                        style="@style/TextNavigationItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> mainActivity.navigateTo(navToprate)}"
                        android:text="@string/menu_toprate" />

                    <TextView
                        android:id="@+id/nav_genre"
                        style="@style/TextNavigationItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_genre"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_genre" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
