<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.moviedb.data.service.MovieDetailResponse" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.moviedetail.MovieDetailActivity">


            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_200"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{movie.backdrop}" />

            <TextView
                android:id="@+id/text_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_name"
                app:layout_constraintBottom_toBottomOf="@+id/text_name_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_name_movie" />

            <TextView
                android:id="@+id/text_name_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{movie.name}"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/image_movie" />

            <TextView
                android:id="@+id/text_title_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_genre"
                app:layout_constraintBottom_toBottomOf="@+id/text_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_genre" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{movie.genre}"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/text_name_movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_manufacture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:orientation="horizontal"
                android:textSize="@dimen/sp_16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/text_genre"
                app:showManufacture="@{movie.companies}"
                tools:listitem="@layout/item_manufacture" />

            <TextView
                android:id="@+id/text_title_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_manufacturer"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_manufacture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recycler_manufacture" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                app:overview="@{movie.overview}" />

            <TextView
                android:id="@+id/title_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_average"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/RatingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:numStars="10"
                android:rating="@{movie.voteAverage}"
                android:stepSize="0.1"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/recycler_manufacture" />

            <TextView
                android:id="@+id/text_title_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_release_date" />

            <TextView
                android:id="@+id/text_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@{movie.releaseDate}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@id/recycler_caster" />

            <TextView
                android:id="@+id/text_average_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/ratingBar"
                app:rating="@{movie.voteAverage}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@+id/text_name_movie"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/text_name_movie" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/text_genre"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/text_genre" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/text_title_manufacturer"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/text_title_manufacturer" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/title_vote"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/title_vote" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/text_title_overview"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/text_title_overview" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/text_title_release_date"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/text_title_release_date" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                app:layout_constraintBottom_toBottomOf="@id/text_title_caster"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/text_title_caster" />

            <TextView
                android:id="@+id/text_title_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/title_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_overview" />

            <TextView
                android:id="@+id/text_title_caster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/text_title_caster"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_caster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recycler_caster" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_caster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/text_overview"
                app:showCasters="@{movie.credit.casters}"
                tools:listitem="@layout/item_caster" />

            <Button
                android:id="@+id/button_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/bg_round_corner"
                android:text="@string/title_trailer"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
